# ci-e2e

./: .gitignore  README.md  analyze.ipynb  pyproject.toml  requirements.txt
design-files/: lwir-pre.py  lwir.py
e2e/: __init__.py  __main__.py  conf.py  material.py
e2e/data/: __init__.py  hypersim.py
e2e/framework/: __init__.py  common.py  e2e.py  pre.py  trainer.py
e2e/model/: __init__.py  imsys.py
e2e/nn/: __init__.py  wienerunet.py
e2e/specification/: __init__.py  parse.py  template.py
e2e/train/: __main__.py  common.py  pre.py  trainer.py
resources/materials/2024R2/: ARTON.AGF  AUER-LIGHTING.AGF  FOCUSLIGHT.AGF  HERAEUS.AGF  NHG.agf  NIKON-HIKARI.agf  OPTIMAX.AGF  PRECIOSA.AGF  SALIENCE.AGF  Sumita.agf  TEIJIN.AGF
structure/: lwir.json
viflo/: conf.py  material.py  record.py  viflog.py
viflo/data/: __init__.py  core.py  hypersim.py  misc.py
viflo/framework/: __init__.py  core.py  deblur.py  trainer.py
viflo/model/: imsys.py
viflo/nn/: wienerunet.py
viflo/run/: cla.py  main.py
viflo/specification/: parse.py  template.py
